--- a/ML_glossary.ipynb
+++ b/ML_glossary.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ML glossary.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOK8/jsv7cNYHGOtLaKHzuc",
+      "authorship_tag": "ABX9TyOyEVSclG0Y5+d/4YR8JODB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,43 +35,43 @@
       "source": [
         "\n",
         "\n",
-        "1.   **Models :** A model is a function that computes something on tensors (a forward pass). Some variables that can be updated in response to training.\n",
+        "  **Models :** A model is a function that computes something on tensors (a forward pass). Some variables that can be updated in response to training.\n",
         "\n",
         "\n",
         "\n",
-        "2.   **Forward Pass :** It refers to calculation process, values of the output layers from the inputs data. It's traversing through all neurons from first to last layer (with reference to Neural network).\n",
+        "  **Forward Pass :** It refers to calculation process, values of the output layers from the inputs data. It's traversing through all neurons from first to last layer (with reference to Neural network).\n",
         "\n",
         "\n",
         "\n",
-        "3. **Tensors :** A tensor is a generalization of vectors and matrices to potentially higher dimensions. In context of Tensorflow, tensor is the main object we manipulate and pass around.\n",
+        " **Tensors :** A tensor is a generalization of vectors and matrices to potentially higher dimensions. In context of Tensorflow, tensor is the main object we manipulate and pass around.\n",
         "\n",
         "\n",
         "\n",
-        "4. **Layers :** A layer is a callable object that takes as input one or more tensors and that outputs one or more tensors.\n",
+        " **Layers :** A layer is a callable object that takes as input one or more tensors and that outputs one or more tensors.\n",
         "\n",
         "\n",
         "\n",
-        "5. **Callable object :** It is the object in computer program which can be called like a function.\n",
+        " **Callable object :** It is the object in computer program which can be called like a function.\n",
         "\n",
         "\n",
         "\n",
-        "6. **Tensorflow :** It is the free, end-to-end open-source software library for machine learning.\n",
+        " **Tensorflow :** It is the free, end-to-end open-source software library for machine learning.\n",
         "\n",
         "\n",
         "\n",
-        "7. **Library :** A library is a collection or set of codes pre-written, that can be called upon when building your own code.\n",
+        " **Library :** A library is a collection or set of codes pre-written, that can be called upon when building your own code.\n",
         "\n",
         "\n",
         "\n",
-        "8. **Keras :** Keras is an open-source library for Neural networks.\n",
+        " **Keras :** Keras is an open-source library for Neural networks.\n",
         "\n",
         "\n",
         "\n",
-        "9. **Sequential :** A sequential model is appropriate for a plain stack of layers where each layer has exactly one input tensor and one output tensor. This model can not be used for multiple inputs and outputs. \n",
+        " **Sequential :** A sequential model is appropriate for a plain stack of layers where each layer has exactly one input tensor and one output tensor. This model can not be used for multiple inputs and outputs. \n",
         "\n",
         "\n",
         "\n",
-        "10. **tf.keras.layers.Dense :** Dense implements the operation. \n",
+        " **tf.keras.layers.Dense :** Dense implements the operation. \n",
         "\n",
         "\n",
         "       output = activation(dot(input, kernel) + bias)\n",
@@ -84,11 +84,11 @@
         "\n",
         "\n",
         "\n",
-        "11. **Conv2D :** 2D convolutional layer. This layer creates a convolution kernel that is wind with layers input which helps produce a tensor of outputs.\n",
+        " **Conv2D :** 2D convolutional layer. This layer creates a convolution kernel that is wind with layers input which helps produce a tensor of outputs.\n",
         "\n",
         "\n",
         "\n",
-        "12. **tf.keras.layers.Flatten :** Flattens the input and does not affect the batch size. \n",
+        " **tf.keras.layers.Flatten :** Flattens the input and does not affect the batch size. \n",
         "\n",
         "\n",
         "\n",
