--- a/ML_glossary.ipynb
+++ b/ML_glossary.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ML glossary.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOyEVSclG0Y5+d/4YR8JODB",
+      "authorship_tag": "ABX9TyMP1r6GcS0JzE34kx2qoMuJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,6 +89,27 @@
         "\n",
         "\n",
         " **tf.keras.layers.Flatten :** Flattens the input and does not affect the batch size. \n",
+        "\n",
+        "\n",
+        " **tf.keras.layers.Dropout :**  The Dropout layer randomly sets input units to 0 with a frequency of rate at each step during training time, which helps prevent overfitting.\n",
+        "\n",
+        "\n",
+        " **tf.keras.layers.MaxPool2D :** Downsamples the input along its spatial dimensions (height and width).\n",
+        "\n",
+        "\n",
+        " **Pooling :** A pooling layer is building block of a CNN. Pooling. Its function is to progressively reduce the spatial size of the representation to reduce the amount of parameters and computation in the network.\n",
+        "\n",
+        "\n",
+        " **tf.keras.preprocessing.image.ImageDataGenerator :** Generate batches of tensor image data with real-time data augmentation.\n",
+        "\n",
+        "\n",
+        " \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
