More commits to go

--- a/ML_glossary.ipynb
+++ b/ML_glossary.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "ML glossary.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMP1r6GcS0JzE34kx2qoMuJ",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOnEHh+LT8+dx41r1WPfiw1"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Ana1601-code/Machine-learning-glossary/blob/main/ML_glossary.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -103,7 +92,23 @@
         " **tf.keras.preprocessing.image.ImageDataGenerator :** Generate batches of tensor image data with real-time data augmentation.\n",
         "\n",
         "\n",
+        " **os :** The OS module in Python provides functions for interacting with the operating system. It is the part of standard library in python.  \n",
+        "\n",
+        "\n",
+        " **sum([len(files) for r, d, files in os.walk(directory_path)]) :** used to return the number of files in directory and subdirectly.\n",
+        "\n",
+        "\n",
+        " **Batch size :** Batch size refers to the number of training examples utilized in one iteration. Batch size starts from 32, it can be 64,128,256. \n",
+        "\n",
+        "\n",
+        " **Epochs :** An epoch is a term used in machine learning and indicates the number of passes of the entire training dataset the machine learning algorithm has completed. Simply, epochs means iteration. \"How many iterations or epochs will be done for the given dataset.\"\n",
+        "\n",
+        "\n",
         " \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
