--- a/ML_glossary.ipynb
+++ b/ML_glossary.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "ML glossary.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOnEHh+LT8+dx41r1WPfiw1"
+      "authorship_tag": "ABX9TyOnEHh+LT8+dx41r1WPfiw1",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Ana1601-code/Machine-learning-glossary/blob/main/ML_glossary.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
